SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

MS-Excel export of UI tables allows to include result coloring.
  See right mouse menu of UI tables --> "Export CSV / MS Excel / XML / JSON ..."
  The following colors will be saved:
   - User colored rows or cell, see tables right mouse menu
   - Find result coloring
   - Duplicates coloring
  Warning: For large tables coloring results in higher memory usage and slower export.

#608 SQL Parametrisation Plugin: The parameter value dialog now has a checkbox named "Hide value"
  which turns the value text field into a password field.

Made Aliases and Session popup menus accessible through
  - shortcuts alt shift A and alt shift S respectively
  - tools popup

Searching in SQuirreL's major configurations namely Global Preferences and New Session Properties
  See menu File --> Find Preference

Update Commons Lang library to version 3.12.0,
  see https://commons.apache.org/proper/commons-lang/

Main application toolbar: Replaced the former Aliases and Session combo boxes by toolbar buttons
  which display popup menus to select Aliases and Session respectively.

Removed dependencies on outdated Hibernate libraries (3.2.4.sp1).


Bug fixes:

#1501 Copy as WIKI Table - JIRA/Confluence --> Values containing "|" were not correctly escaped.

#1500 SQL Parametrisation Plugin: Quote values check box will always be enabled/active.

Fixed scrolling behaviour of scrollable popup menus when up/down keys were used.

Command line mode: Java process didn't properly end when SQL was executed on command line.
  Example on Windows: <squirrel-home>\squirrelcli\squirrelcli.bat -alias "yourAlias" -sql "SELECT * FROM <yourTable>"



4.4.0 (04/06/2021)
==================

Enhancements:

Look and Feel plugin:
  - Upgrade FlatLaF to 2.1