@@ -1,24 +1,24 @@
 package net.sourceforge.squirrel_sql.client.gui.aboutdialog;
 
-import net.sourceforge.squirrel_sql.fw.util.StringManager;
-import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
-import net.sourceforge.squirrel_sql.fw.util.StringUtilities;
-import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
-import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
-
+import java.awt.BorderLayout;
+import java.lang.management.ManagementFactory;
+import java.lang.management.ThreadInfo;
 import javax.swing.JButton;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
 import javax.swing.JTextArea;
-import java.awt.BorderLayout;
-import java.lang.management.ManagementFactory;
-import java.lang.management.ThreadInfo;
+
+import net.sourceforge.squirrel_sql.fw.gui.GUIUtils;
+import net.sourceforge.squirrel_sql.fw.util.StringManager;
+import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
+import net.sourceforge.squirrel_sql.fw.util.StringUtilities;
 
 final class ThreadPanel extends JPanel
 {
 
    private static final StringManager s_stringMgr = StringManagerFactory.getStringManager(ThreadPanel.class);
 
+   private final JScrollPane scrollPane;
 
    private JTextArea content;
 
@@ -29,9 +29,10 @@ final class ThreadPanel extends JPanel
       content = new JTextArea(5, 20);
       content.setEditable(false);
       content.setLineWrap(false);
-      doThreadDump();
-      add(new JScrollPane(content), BorderLayout.CENTER);
+      scrollPane = new JScrollPane(content);
+      add(scrollPane, BorderLayout.CENTER);
       add(createButtons(), BorderLayout.SOUTH);
+      doThreadDump();
    }
 
    private JPanel createButtons()
@@ -57,5 +58,8 @@ final class ThreadPanel extends JPanel
       }
 
       content.setText(sb.toString());
+
+      GUIUtils.forceScrollToBegin(scrollPane);
+
    }
 }
